tests-integration/tests/roundtrip/invalid/syntax/unexpected_token/01/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/unexpected_token/01/input.essence:1:18:
  |
1 | find x: int(1..4))
  |                  ^
Unexpected )

